[tool.poetry]
name = "ctower"
version = "0.1.0"
description = ""
authors = ["Oguzhan Yilmaz <oguzhan@kloia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.24.66"
typer = "^0.6.1"
termcolor = "^2.0.1"
tabulate = "^0.8.10"
rich = "^12.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
