[tool.poetry]
name = "ctower"
version = "0.0.8"
description = "CLI application for managing AWS Control Tower for your AWS Organization."
authors = ["Oguzhan Yilmaz <oguzhanylmz271@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/kloia/ctower"
repository = "https://github.com/kloia/ctower"
keywords = ["aws", "organization", "control tower", "organizational unit"]



[tool.poetry.scripts]
ctower = "ctower.main:run_app"

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.24.66"
typer = "^0.6.1"
termcolor = "^2.0.1"
tabulate = "^0.8.10"
rich = "^12.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
